--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -24,6 +24,11 @@
   --color-blue: #29c9f9;
   --color-purple: #a77eff;
   --color-pink: #ff2a6a;
+
+  /* Screens */
+  --screen-lg: 1920px;
+  --screen-md: 744px;
+  --screen-sm: 375px;
 }
 
 /* 기본 폰트 설정 */
