--- a/.storybook/setting.css
+++ b/.storybook/setting.css
@@ -17,7 +17,9 @@
 
   /* Core colors */
   --color-black: #0f0f0f;
+  --color-black-50 : rgba(15,15,15,0.5);
   --color-white: #ffffff;
+  --color-white-10: rgba(255, 255, 255, 0.1);
 
   /* Grays */
   --color-gray-100: #eeeeee;
