style: 전역 스타일 수정

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -31,4 +31,6 @@
 /* 기본 폰트 설정 */
 body {
   font-family: var(--font-noto-sans-kr);
+  background-color: var(--color-black);
+  color: var(--color-white);
 }
