--- a/.storybook/setting.css
+++ b/.storybook/setting.css
@@ -39,4 +39,18 @@
 /* 기본 폰트 설정 */
 body {
   font-family: var(--font-noto-sans-kr);
+  background-color: var(--color-black);
+  color : var(--color-white);
 }
+
+/* 스토리북 문서 전체 배경 */
+.docs-story {
+  background-color: #0f0f0f !important;
+}
+
+/* 스토리북 컴포넌트가 렌더링되는 영역의 배경 */
+.sb-story {
+  background-color: #0f0f0f !important;
+}
+
+
