--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -34,3 +34,34 @@ body {
   background-color: var(--color-black);
   color: var(--color-white);
 }
+
+/* 스크롤 스타일 적용 */
+html,
+body {
+  height: 100%;
+  overflow: hidden;
+}
+
+.custom-scroll {
+  overflow-y: auto;
+  scrollbar-width: thin;
+  /* margin-top : 60px; */
+  scrollbar-color: var(--color-gray-400) transparent;
+}
+
+.custom-scroll::-webkit-scrollbar {
+  width: 8px;
+}
+
+.custom-scroll::-webkit-scrollbar-thumb {
+  background-color: var(--color-gray-400);
+  border-radius: 2px;
+}
+
+.custom-scroll::-webkit-scrollbar-thumb:hover {
+  background-color: var(--color-gray-300);
+}
+
+.custom-scroll::-webkit-scrollbar-track {
+  background: transparent;
+}
