style: storybook 컨테이너 스타일 수정

--- a/.storybook/setting.css
+++ b/.storybook/setting.css
@@ -54,3 +54,8 @@ body {
 }
 
 
+@media screen and (min-width: 375px) and (max-width: 744px) {
+  .sb-show-main.sb-main-padded {
+    padding: 0 !important;
+  }
+}
